--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-Bienvanido <br>
+Bienvenido <br>
 <input type="number" [(ngModel)]="clave">
 <button (click)="ngOnInit()">Save</button>
 {{ data | json}}
